--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
             color: #666;
         }
 
+        /* Dark Mode */
+        body.dark-mode {
+            background-color: #121212;
+            color: #f9f9f9;
+        }
+
+        body.dark-mode .time-block {
+            background-color: #1e1e1e;
+        }
+
+        body.dark-mode footer {
+            background-color: #1e1e1e;
+        }
+
         /* Mobile Responsiveness */
         @media (max-width: 600px) {
             header h1 {
@@ -144,8 +158,11 @@
             <!-- Legend items for each activity type -->
         </div>
         <div class="credits">
-            Credits: Funding: Mom/Grandma, Travel Agent: Lorie, App Developer: Brian
+            <p>Funding: Mom/Grandma</p>
+            <p>Travel Agent: Lorie</p>
+            <p>App Developer: Brian</p>
         </div>
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
     </footer>
 
     <script>
@@ -259,6 +276,12 @@
 
         // Load the schedule when the page loads
         loadSchedule();
+
+        // Toggle Dark Mode
+        const toggleButton = document.getElementById('dark-mode-toggle');
+        toggleButton.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+        });
     </script>
 </body>
 </html>
