--- a/index.html
+++ b/index.html
@@ -249,9 +249,8 @@
 
                     // Build the content dynamically
                     blockElement.innerHTML = `
-                        <h3>${style.emoji} ${block.time} - ${block.title}</h3>
+                        <h3>${style.emoji} ${block.time}</h3>
                         <p><strong>Location:</strong> <a href="${block.location.url}" target="_blank">${block.location.name}</a></p>
-                        <p><strong>Activity:</strong> ${block.activity}</p>
                         <p><strong>Details:</strong> ${block.details}</p>
                     `;
 
